Mobile nav now working correctly at small tablet size. Logo grid mobile scrollbar now not showing as intended.

--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -707,7 +707,7 @@ button:not([type="button"]) {
   transition: background-color 0.15s ease-in-out, padding 0.15s ease-in-out; }
   .core-header.sticky {
     background-color: rgba(255, 255, 255, 0.98); }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1024px) {
     .core-header.sticky {
       padding-top: 15px;
       padding-bottom: 5px; }
@@ -756,7 +756,7 @@ button:not([type="button"]) {
       fill: #21C2D2; }
     .core-header .pages-li:hover > .subpages {
       display: block; }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1024px) {
     .core-header .pages-li.active {
       position: relative;
       color: #21C2D2; }
@@ -782,7 +782,7 @@ button:not([type="button"]) {
       margin-left: 5px; }
       .core-header .page-heading svg path {
         transition: fill 0.15s ease-in-out; }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1024px) {
       .core-header .page-heading {
         -webkit-font-smoothing: subpixel-antialiased;
         -moz-osx-font-smoothing: grayscale; } }
@@ -874,13 +874,19 @@ button:not([type="button"]) {
       margin-top: 0;
       -webkit-transform: rotate(-45deg);
               transform: rotate(-45deg); } }
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1023px) {
     .core-header {
       padding: 0 20px; }
       .core-header .logo {
         max-width: 80px; } }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
+  .mobile-support-pages {
+    display: none; } }
+
+@media screen and (max-width: 1023px) {
+  .pages-button {
+    display: none; }
   .nav-open .core-header .nav {
     display: block;
     position: fixed;
@@ -951,7 +957,7 @@ button:not([type="button"]) {
     visibility: hidden; }
   .core-content {
     *zoom: 1; }
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1023px) {
     .core-content {
       padding-top: 48px; } }
 
@@ -2519,8 +2525,7 @@ button:not([type="button"]) {
   .logo-grid .logo {
     float: left;
     width: auto !important;
-    height: 50px;
-    margin-bottom: 0; } }
+    height: 50px; } }
 
 .resources-single .global-wrapper {
   padding: 100px 80px;
@@ -3010,7 +3015,7 @@ button:not([type="button"]) {
     left: -80px;
     width: 80px;
     height: 100%;
-    background-color: #F4F5F6; }
+    background-color: #F9FAFB; }
   .home-header .hero-cta-1:after,
   .home-header .hero-cta-2:after {
     content: '';
