--- a/assets/stylesheets/block/_logo-grid.scss
+++ b/assets/stylesheets/block/_logo-grid.scss
@@ -96,7 +96,6 @@
 			float: left;
 			width: auto !important;
 			height: 50px;
-			margin-bottom: 0;
 		}
 
 		// @for $i from 1 through 4 {
