--- a/assets/stylesheets/pages/_home-header.scss
+++ b/assets/stylesheets/pages/_home-header.scss
@@ -187,7 +187,7 @@
 			left: -80px;
 			width: 80px;
 			height: 100%;
-			background-color: $lightGray;
+			background-color: $superLightGray;
 		}
 
 		.hero-cta-1, 
